kubernetes_lab/assets/python-app-deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:  
    app: python-app
  name: python-app
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - image: janderton/python-http-demo:latest
        imagePullPolicy: Always
        name: app
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
