kubernetes_lab/assets/python-app-pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: python-app
  name: python-app
  namespace: default
spec:
  containers:
  - image: janderton/python-http-demo:latest
    imagePullPolicy: Always
    name: python-app
    resources:
      requests:
        cpu: 100m
        memory: 128Mi        
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
