kubernetes_lab/assets/secure-app-pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: secure-app
  name: secure-app
  namespace: secure-app
spec:
  containers:
  - image: janderton/python-http-demo:latest
    imagePullPolicy: Always
    name: python-app
    ports:
    - containerPort: 8080
    resources:
      requests:
        cpu: 100m
        memory: 128Mi        
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  securityContext: {}
  serviceAccount: secure-app
  serviceAccountName: secure-app
