kubernetes_lab/assets/sleep-pod.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: sleep-pod
  name: sleep-pod
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep-pod
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sleep-pod
    spec:
      containers:
      - image: centos:latest
        imagePullPolicy: Always
        name: app
        command: ['/bin/bash']
        args: ["-c", "while true; do echo hello; sleep 10;done"]
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
