kubernetes_lab/assets/mongo-service.yaml
---
apiVersion: v1
kind: Service
metadata:
 name: mongo
 labels:
 name: mongo
spec:
 ports:
 - name: mongo
   port: 27017
   targetPort: 27017
 clusterIP: None
 selector:
   role: mongo
