kubernetes_lab/assets/python-app-service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: python-app-service
spec:
  selector:
    app: python-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
