kubernetes_lab/assets/python-todo-all.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ../kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: web
    app: python-todo
  name: python-todo
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: web
        app: python-todo
    spec:
      containers:
      - args:
        - python
        - -u
        - app.py
        image: janderton/python-mongo-todo:v2
        name: python-todo
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi        
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      serviceAccount: secure-app
      serviceAccountName: secure-app
      
---
kind: Service
apiVersion: v1
metadata:
  name: python-todo-service
  labels:
    app: python-todo
spec:
  selector:
    app: python-todo
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000
  selector:
    app: python-todo
  type: LoadBalancer
