kubernetes_lab/assets/python-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: python-app-ingress
  namespace: default
spec:
 rules:
 - http:
     paths:
     - path: /hostless
       backend:
           serviceName: python-app-service
           servicePort: 80
